--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -30,9 +30,7 @@
                         </li>
 
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Order</a>
                         @* @if (User.IsInRole(SD.Role_Admin))
                         {*@
                             <li class="nav-item dropdown">
